--- a/src/Mzayad.Web/Content/site-home.less
+++ b/src/Mzayad.Web/Content/site-home.less
@@ -103,6 +103,40 @@
                         }
                     }
                 }
+
+                .auction-bid-details {
+                    text-align: center;
+                }
+
+                .auction-bid-label {
+                    text-transform: uppercase;
+                }
+
+                .auction-bid-form {
+
+                    .form-control,
+                    .btn-default {
+                        font-size: @font-size + 1;
+                        font-weight: bold;
+                        line-height: normal;
+                    }
+
+                    .form-control {
+                        padding: 8px;
+                        background-color: white;
+                        border: 2px solid @orange;
+                        border-top-left-radius: 500px;
+                        border-bottom-left-radius: 500px;
+                        text-align: center;
+                    }
+
+                    .btn-default {
+                        background-color: @orange;
+                        border-top-right-radius: 500px;
+                        border-bottom-right-radius: 500px;
+                        text-transform: uppercase;
+                    }
+                }
             }
         }
     }
