--- a/src/Mzayad.Web/Views/Shared/DisplayTemplates/AuctionTile.cshtml
+++ b/src/Mzayad.Web/Views/Shared/DisplayTemplates/AuctionTile.cshtml
@@ -3,7 +3,7 @@
 
 <div class="auction-tile">
     <div class="auction-tile-image">
-        <img class="img-responsive" src="@Model.MainImage.ImageMdUrl" alt="@Model.Title" />
+        <img class="img-responsive" src="@Model.ImageUrl" alt="@Model.Title" />
     </div>
     <div class="auction-tile-details">
         <div class="auction-tile-title auction-tile-row">@Model.Title</div>
