--- a/src/Mzayad.Web/Content/site-auctions.less
+++ b/src/Mzayad.Web/Content/site-auctions.less
@@ -12,7 +12,7 @@
         width: 100%;
         float: left;
         display: flex;
-        padding: 10px;
+        padding: 0 10px;
     }
 
     @media (min-width: 560px) {
