--- a/src/Mzayad.Web/Content/site-home.less
+++ b/src/Mzayad.Web/Content/site-home.less
@@ -8,6 +8,13 @@
         display: none;
     }
 
+    h2 {
+        margin: 50px 0 25px 0;
+        font-size: @font-size + 1;
+        text-align: center;
+        text-transform: uppercase;
+    }
+
     #auction-list {
         margin: 0;
         padding: 0;
