--- a/src/Mzayad.Web/Views/Shared/DisplayTemplates/AuctionTile.cshtml
+++ b/src/Mzayad.Web/Views/Shared/DisplayTemplates/AuctionTile.cshtml
@@ -6,19 +6,22 @@
         <img class="img-responsive" src="@Model.ImageUrl" alt="@Model.Title" />
     </div>
     <div class="auction-tile-details">
-        <div class="auction-tile-title auction-tile-row">@Model.Title</div>
+        <h3 class="auction-tile-title auction-tile-row">@Model.Title</h3>
         <div class="auction-tile-prices auction-tile-row">
             <div class="auction-tile-retail-price">
-                @StringFormatter.ObjectFormat(Global.RetailPriceWithLabel, new { Model.RetailPrice })
+                @StringFormatter.ObjectFormat(Global.RetailPriceWithLabel, new {Model.RetailPrice})
             </div>
             <div class="auction-tile-winning-price">
-                @StringFormatter.ObjectFormat(Global.WinningPriceWithLabel, new { WinningPrice = Model.WonByAmount })
+                @StringFormatter.ObjectFormat(Global.WinningPriceWithLabel, new {WinningPrice = Model.WonByAmount})
             </div>
         </div>
-        <div class="auction-tile-won-by-avater auction-tile-row">
-            <img src="@Model.WonByAvatarUrl" alt="@Model.WonByUserName" width="64" height="64" />
-            <div class="auction-title-username">@Model.WonByUserName</div>
-        </div>
+        @if (Model.WonByUserName != null)
+        {
+            <div class="auction-tile-won-by-avater auction-tile-row">
+                <img src="@Model.WonByAvatarUrl" alt="@Model.WonByUserName" width="64" height="64"/>
+                <div class="auction-title-username">@Model.WonByUserName</div>
+            </div>
+        }
         @if (Model.BuyNowEnabled)
         {
             <div class="auction-tile-buynow auction-tile-row">
