--- a/src/Mzayad.Web/Views/Shared/EditorTemplates/DateTimePicker.cshtml
+++ b/src/Mzayad.Web/Views/Shared/EditorTemplates/DateTimePicker.cshtml
@@ -1,5 +1,4 @@
-﻿@using System.Globalization
-@model DateTime?
+﻿@model DateTime?
 @{
     var date = "";
     var dateTime = "";
@@ -9,7 +8,7 @@
     if (Model.HasValue)
     {
         date = Model.Value.ToString("dd/MM/yyyy");
-        dateTime = Model.Value.ToString(CultureInfo.CurrentCulture);
+        dateTime = Model.Value.AddHours(-3).ToString("u"); // AST -> UTC
         hour = Model.Value.Hour;
         minute = Model.Value.Minute;
     }
